--- a/Grocery/grocery/public/index.html
+++ b/Grocery/grocery/public/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Buy fresh Items from the green grocery"
       content="GreenMart Grocery shop"
     />
-     <title>GreenMart</title>
+
+    <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Css link-->
+    <link rel="stylesheet" href="style.css">
+    <title>GreenMart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
